--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/babel__traverse": "^7.28.0",
+    "@types/estree": "^1.0.8",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
+    "@types/nlcst": "^2.0.3",
+    "@types/unist": "^3.0.3",
     "gh-pages": "^6.3.0"
   }
 }
